style(column-editing): fix badge z-index

--- a/packages/column-editing/src/App.scss
+++ b/packages/column-editing/src/App.scss
@@ -12,6 +12,7 @@
   background-color: black;
   color: whitesmoke;
   user-select: none;
+  z-index: 999;
 
   span {
     position: absolute;
